Bug 365970 - Demanding attention tasks are not shown on all desktops
Summary: Demanding attention tasks are not shown on all desktops
Status: RESOLVED FIXED
Alias: None
Product: plasmashell
Classification: Plasma
Component: Task Manager and Icons-Only Task Manager widgets (other bugs)
Version First Reported In: 5.7.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: 1.0
Assignee: Eike Hein
URL:
Keywords:
: 360740 (view as bug list)
Depends on:
Blocks:
 
Reported: 2016-07-22 07:25 UTC by Teet Talviste
Modified: 2016-08-23 19:11 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Teet Talviste 2016-07-22 07:25:43 UTC
Task manager honors "show only tasks from current desktop" too vigorously. Previously, when window demanded attention i.e. skype received a message or when clicking a web link in some other app, taskbar entry for that app was shown regardless of whether it belonged to current desktop or not.

Reproducible: Always

Steps to Reproduce:
1. Enable "show only tasks from current desktop"
2. Open browser
3. Move "some" app to other desktop
4. Click a link in "some" app

Actual Results:  
Web browser icon doesn't show in task bar. When navigating to the desktop where the browser resides, the icon is highlighted.

Expected Results:  
Web browser icon is highlighted and shown on all desktops. Clicking it shows the browser and changes current desktop to where the browser is.
Comment 1 Eike Hein 2016-07-22 09:52:09 UTC
Thanks, good report. It's not hard to change, will do.
Comment 2 sparhawk 2016-07-22 10:43:15 UTC
Just wanted to mention that this bug causes me to miss IM messages too.

Related forum thread: https://forum.kde.org/viewtopic.php?f=289&t=134995
Comment 3 Eike Hein 2016-07-22 20:48:53 UTC
Git commit da5c2fd5058e60d12bfbdfa2b1863433ab20dfbb by Eike Hein.
Committed on 22/07/2016 at 20:48.
Pushed by hein into branch 'Plasma/5.7'.

Treat IsDemandingAttention as IsOnAllVirtualDesktops.

M  +2    -1    libtaskmanager/taskfilterproxymodel.cpp

http://commits.kde.org/plasma-workspace/da5c2fd5058e60d12bfbdfa2b1863433ab20dfbb
Comment 4 Eike Hein 2016-07-31 07:31:28 UTC
*** Bug 360740 has been marked as a duplicate of this bug. ***
Comment 5 kdebuac.rhn 2016-08-15 19:15:15 UTC
The windows demanding attention are still not shown when they are in separate activities - this is a departure from the previous behaviour.
Unfortunately, I can't reopen this bug, so I'll describe the bug again:

Reproducible: always

Steps to reproduce:
1. Open a Konsole window
2. Switch to another activity
3. Open a terminal window
4. Issue "wall" command

Actual:
A message appears in the current terminal.

Expected:
A message appears in the current terminal and the Konsole task manager entry appears in the "demands attention" mode.

Additional info:
My task manager has the following options checked: "Show only tasks from current desktop" and Show only tasks from current activity".
Plasma version 5.7.3-2.fc23
Comment 6 Eike Hein 2016-08-23 18:46:19 UTC
The above fix was for virtual desktops, not activities. It needs a similar fix for activities, will do.
Comment 7 Eike Hein 2016-08-23 19:11:28 UTC
Git commit 87f8b790702d12571ce964d89dfb1f0cadeed834 by Eike Hein.
Committed on 23/08/2016 at 19:11.
Pushed by hein into branch 'Plasma/5.7'.

Exempt tasks demanding attention from by-activity filtering as well.

M  +7    -5    libtaskmanager/taskfilterproxymodel.cpp

http://commits.kde.org/plasma-workspace/87f8b790702d12571ce964d89dfb1f0cadeed834