Treat IsDemandingAttention as IsOnAllVirtualDesktops.

BUG:365970